[gd_scene load_steps=11 format=3 uid="uid://is8a3bvf2un1"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_qjl8v"]
[ext_resource type="Theme" uid="uid://bgv6ueaouljqv" path="res://default_theme.tres" id="2_0ai2m"]
[ext_resource type="Texture2D" uid="uid://cvhkdf5tbnm6d" path="res://icons/char1.png" id="2_xeckm"]
[ext_resource type="FontFile" uid="uid://cc4xuvidbajq6" path="res://fonts/visitor1.ttf" id="3_h08gb"]
[ext_resource type="Texture2D" uid="uid://diftevdlg7cmx" path="res://icons/char2.png" id="3_yxxp8"]
[ext_resource type="Texture2D" uid="uid://dptoqt6vyo4of" path="res://icons/char3.png" id="4_tanc7"]
[ext_resource type="Texture2D" uid="uid://cnn6iguti0pju" path="res://icons/char4.png" id="5_7knxw"]
[ext_resource type="FontFile" uid="uid://b4xj6slwwrknm" path="res://fonts/Noto_Sans_JP/NotoSansJP-VariableFont_wght.ttf" id="8_gi5pg"]

[sub_resource type="LabelSettings" id="LabelSettings_qx30u"]
font = ExtResource("3_h08gb")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_lon47"]
font = ExtResource("8_gi5pg")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qjl8v")
metadata/_edit_vertical_guides_ = [-164.0]

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_0ai2m")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(256, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 6

[node name="StartGameButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "START GAME"

[node name="SettingsButton" type="Button" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 256.0
offset_top = 101.0
offset_right = 1024.0
offset_bottom = 164.0
text = "> RUMBLE NATION <"
label_settings = SubResource("LabelSettings_qx30u")
horizontal_alignment = 1

[node name="GameOptions" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -331.0
offset_top = -170.0
offset_right = 331.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_0ai2m")
current_tab = 0

[node name="Local" type="MarginContainer" parent="GameOptions"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOptions/Local"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="GameSettings" type="HBoxContainer" parent="GameOptions/Local/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="NumPlayerLabel" type="Label" parent="GameOptions/Local/VBoxContainer/GameSettings"]
layout_mode = 2
text = "Number of Players"

[node name="NumPlayersOption" type="OptionButton" parent="GameOptions/Local/VBoxContainer/GameSettings"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "2"
popup/item_1/text = "3"
popup/item_1/id = 1
popup/item_2/text = "4"
popup/item_2/id = 2

[node name="PaddingLabel" type="Label" parent="GameOptions/Local/VBoxContainer/GameSettings"]
layout_mode = 2

[node name="MapLabel" type="Label" parent="GameOptions/Local/VBoxContainer/GameSettings"]
layout_mode = 2
text = "Map Selection"

[node name="MapOption" type="OptionButton" parent="GameOptions/Local/VBoxContainer/GameSettings"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Original"
popup/item_1/text = "Alt 1"
popup/item_1/id = 1

[node name="PlayerSettings" type="HBoxContainer" parent="GameOptions/Local/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Player0" type="VBoxContainer" parent="GameOptions/Local/VBoxContainer/PlayerSettings"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="Label" type="Label" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player0"]
layout_mode = 2
text = "Player 1"

[node name="LineEdit" type="LineEdit" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player0"]
layout_mode = 2
text = "Reddo"
placeholder_text = "Name"
clear_button_enabled = true

[node name="Icon" type="HBoxContainer" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player0"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player0/Icon"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 4
popup/item_0/icon = ExtResource("2_xeckm")
popup/item_1/icon = ExtResource("3_yxxp8")
popup/item_1/id = 1
popup/item_2/icon = ExtResource("4_tanc7")
popup/item_2/id = 2
popup/item_3/icon = ExtResource("5_7knxw")
popup/item_3/id = 3

[node name="ColorPickerButton" type="ColorPickerButton" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player0/Icon"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Color"
color = Color(1, 0, 0, 1)
edit_alpha = false

[node name="AICheckBox" type="CheckBox" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player0/Icon"]
layout_mode = 2
text = "AI"

[node name="Player1" type="VBoxContainer" parent="GameOptions/Local/VBoxContainer/PlayerSettings"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="Label" type="Label" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player1"]
layout_mode = 2
text = "Player 2"

[node name="LineEdit" type="LineEdit" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player1"]
layout_mode = 2
text = "Blu"
placeholder_text = "Name"
clear_button_enabled = true

[node name="Icon" type="HBoxContainer" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player1"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player1/Icon"]
layout_mode = 2
size_flags_horizontal = 3
selected = 1
item_count = 4
popup/item_0/icon = ExtResource("2_xeckm")
popup/item_1/icon = ExtResource("3_yxxp8")
popup/item_1/id = 1
popup/item_2/icon = ExtResource("4_tanc7")
popup/item_2/id = 2
popup/item_3/icon = ExtResource("5_7knxw")
popup/item_3/id = 3

[node name="ColorPickerButton" type="ColorPickerButton" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player1/Icon"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Color"
color = Color(1.44392e-06, 0.519398, 0.785104, 1)
edit_alpha = false

[node name="AICheckBox" type="CheckBox" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player1/Icon"]
layout_mode = 2
text = "AI"

[node name="Player2" type="VBoxContainer" parent="GameOptions/Local/VBoxContainer/PlayerSettings"]
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="Label" type="Label" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player2"]
layout_mode = 2
text = "Player 3"

[node name="LineEdit" type="LineEdit" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player2"]
layout_mode = 2
text = "Yello"
placeholder_text = "Name"
clear_button_enabled = true

[node name="Icon" type="HBoxContainer" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player2"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player2/Icon"]
layout_mode = 2
size_flags_horizontal = 3
selected = 2
item_count = 4
popup/item_0/icon = ExtResource("2_xeckm")
popup/item_1/icon = ExtResource("3_yxxp8")
popup/item_1/id = 1
popup/item_2/icon = ExtResource("4_tanc7")
popup/item_2/id = 2
popup/item_3/icon = ExtResource("5_7knxw")
popup/item_3/id = 3

[node name="ColorPickerButton" type="ColorPickerButton" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player2/Icon"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Color"
color = Color(0.792773, 0.498224, 0.240032, 1)
edit_alpha = false

[node name="AICheckBox" type="CheckBox" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player2/Icon"]
layout_mode = 2
text = "AI"

[node name="Player3" type="VBoxContainer" parent="GameOptions/Local/VBoxContainer/PlayerSettings"]
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="Label" type="Label" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player3"]
layout_mode = 2
text = "Player 4"

[node name="LineEdit" type="LineEdit" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player3"]
layout_mode = 2
text = "Greeny"
placeholder_text = "Name"
clear_button_enabled = true

[node name="Icon" type="HBoxContainer" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player3"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player3/Icon"]
layout_mode = 2
size_flags_horizontal = 3
selected = 3
item_count = 4
popup/item_0/icon = ExtResource("2_xeckm")
popup/item_1/icon = ExtResource("3_yxxp8")
popup/item_1/id = 1
popup/item_2/icon = ExtResource("4_tanc7")
popup/item_2/id = 2
popup/item_3/icon = ExtResource("5_7knxw")
popup/item_3/id = 3

[node name="ColorPickerButton" type="ColorPickerButton" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player3/Icon"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Color"
color = Color(0, 0.571416, 0.535173, 1)
edit_alpha = false

[node name="AICheckBox" type="CheckBox" parent="GameOptions/Local/VBoxContainer/PlayerSettings/Player3/Icon"]
layout_mode = 2
text = "AI"

[node name="AutoRollDice" type="CheckBox" parent="GameOptions/Local/VBoxContainer"]
layout_mode = 2
text = "Auto roll dice (this disables cards, recommended when playing with AI)"

[node name="Remote" type="MarginContainer" parent="GameOptions"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
metadata/_tab_index = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameOptions/Remote"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Connect" type="GridContainer" parent="GameOptions/Remote/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/h_separation = 10
columns = 3

[node name="NameLabel" type="Label" parent="GameOptions/Remote/HBoxContainer/Connect"]
layout_mode = 2
text = "Name"

[node name="NameEdit" type="LineEdit" parent="GameOptions/Remote/HBoxContainer/Connect"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Player 1"
clear_button_enabled = true

[node name="HostButton" type="Button" parent="GameOptions/Remote/HBoxContainer/Connect"]
layout_mode = 2
text = "Host"

[node name="IconLabel" type="Label" parent="GameOptions/Remote/HBoxContainer/Connect"]
layout_mode = 2
text = "Icon"

[node name="OptionButton" type="OptionButton" parent="GameOptions/Remote/HBoxContainer/Connect"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/icon = ExtResource("2_xeckm")
popup/item_1/icon = ExtResource("3_yxxp8")
popup/item_1/id = 1
popup/item_2/icon = ExtResource("4_tanc7")
popup/item_2/id = 2
popup/item_3/icon = ExtResource("5_7knxw")
popup/item_3/id = 3

[node name="EmptyLabel" type="Label" parent="GameOptions/Remote/HBoxContainer/Connect"]
layout_mode = 2

[node name="IPLabel" type="Label" parent="GameOptions/Remote/HBoxContainer/Connect"]
layout_mode = 2
text = "IP"

[node name="IPEdit" type="LineEdit" parent="GameOptions/Remote/HBoxContainer/Connect"]
layout_mode = 2
text = "127.0.0.1"
clear_button_enabled = true

[node name="JoinButton" type="Button" parent="GameOptions/Remote/HBoxContainer/Connect"]
layout_mode = 2
text = "Join"

[node name="Lobby" type="Panel" parent="GameOptions/Remote/HBoxContainer"]
layout_mode = 2

[node name="LobbyLabel" type="Label" parent="GameOptions/Remote/HBoxContainer/Lobby"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Lobby"

[node name="PlayerList" type="ItemList" parent="GameOptions/Remote/HBoxContainer/Lobby"]
layout_mode = 0
offset_top = 29.0
offset_right = 314.0
offset_bottom = 176.0

[node name="ErrorLabel" type="Label" parent="GameOptions/Remote"]
layout_mode = 2
size_flags_vertical = 8

[node name="Rules" type="MarginContainer" parent="GameOptions"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
metadata/_tab_index = 2

[node name="Rules" type="RichTextLabel" parent="GameOptions/Rules"]
layout_mode = 2
theme = ExtResource("2_0ai2m")
bbcode_enabled = true
text = "[u]Territory[/u]:
There are 11 territories on the map with points 2-12, representing values one can get from rolling 2 dice.

[u]Basic Placement[/u]:
Roll 3 dice and place your pieces.
1 dice decides how many pieces you an place, the sum of the 2 other dice decides where you place them.
For example, rolling [[color=\"cyan\"]1[/color], [color=\"magenta\"]3[/color], [color=\"yellow\"]4[/color]]:
    •  you can place [color=\"cyan\"]1[/color] piece on ([color=\"magenta\"]3[/color] + [color=\"yellow\"]4[/color]) = 7
    •  or 2 ([color=\"magenta\"]3[/color]/2 round up) on ([color=\"cyan\"]1[/color] + [color=\"yellow\"]4[/color]) = 5
    •  or 2 ([color=\"yellow\"]4[/color]/2) on ([color=\"cyan\"]1[/color] + [color=\"magenta\"]3[/color]) = 4

[u]Game Flow[/u]:
Players roll dice and place pieces in turn until all players are out. When all players are out of pieces, resolve the game.

[u]Scoring[/u]:
Every soldier counts as 1 piece, and every leader counts as 2 pieces.
The player who has more pieces on the territory wins the territory and gets the points.
For example, when a player wins territory 2, the player gets 2 points.
In games with >=3 players, the 2nd place player gets half of the points (round down).
If two players tie, the player who goes out first wins the tie.

[u]Reinforcement[/u]:
When all players are out, resolve the game from the lowest-point territory (ie 2).
The player who wins the territory can reinforce to adjacent territories with higher points IF the player has pieces on that territory.
For example, if Red wins 2, 2 is adjacent to 4 and 5, and Red has pieces on 4, Red can add 1 piece to 4 during game resolution (2 pieces if  >3 players).

[u]Cards[/u]:
Every player can play up to 1 tactic card and up to 1 leader card in one game.
The leader card can only be played once the leader piece has been played by the player.
Player gets REROLL once per turn after having played a card.
Cards cannot be played by anyone if any player is already out.
"

[node name="Author" type="Label" parent="."]
layout_mode = 0
offset_left = 1018.0
offset_top = 657.0
offset_right = 1271.0
offset_bottom = 708.0
text = "v2024.12.02
Adapted from game by Yogi Shinichi"
label_settings = SubResource("LabelSettings_lon47")
horizontal_alignment = 2
